# rust-ruby-ffi

./: .gitignore  Dockerfile  Gemfile  README.md  main.rb
lib/: Cargo.toml
lib/src/: lib.rs
